# asos-discounted-products-server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py  models.py  spider.py  telegram.py
src/api/: api.py  router.py
src/api/routes/: product.py
src/migrations/: env.py
src/migrations/versions/: 06238cfc2d83_changed_to_sqlalchemy_recommendation_.py  2bf23169484d_auto.py  661be71867c0_first_migration.py
src/models/: base.py  models.py  product.py  user.py
src/schemas/: product.py  schemas.py  user.py
src/services/: auth.py  product.py  services.py
