[tool.poetry]
name = "src"
version = "0.1.0"
description = "Bot for scraping asos.com goods"
authors = ["ZTZ <tzamirov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
aiohttp = "3.9.0"
aiogram = "^3.2.0"
asyncpg = "0.28.0"
alembic = "1.12.0"
schedule = "1.2.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pytz = "^2023.3.post1"
rich = "^13.7.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.4"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
